// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders spinner when loading is true 1`] = `
<section
  className="background--light-secondary hard"
>
  <Meta
    title="Group Finder"
  />
  <div
    className="background--light-primary soft soft-double-left@anchored outlined--light outlined--bottom"
    style={
      Object {
        "WebkitOverflowScrolling": "touch",
        "overflowX": "scroll",
        "overflowY": "hidden",
        "whiteSpace": "nowrap",
      }
    }
  >
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="0"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="test"
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="1"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="test"
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="0"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      urlKey="schedules"
      val={1}
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={false}
      className="flush-bottom"
      data-spec="iconTag"
      iconClass="icon-arrow-up"
      onClick={[Function]}
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="filter"
    />
  </div>
  <withRouter(Apollo(Apollo(Connect(FilterWithoutData))))
    q="test"
    showSearch={true}
    showTags={true}
    toggleSearch={true}
    toggleTags={true}
  />
  <div
    className="soft-half soft@portable soft-double-sides@anchored soft-ends@lap-and-up"
  >
    <div
      className="text-center soft"
    >
      <Spinner
        styles={
          Object {
            "height": "40px",
            "width": "40px",
          }
        }
      />
    </div>
    <div
      className="text-center soft-half-top push-top push-double-top@lap-and-up soft-half-bottom soft-half-sides"
    >
      <h6
        className="em text-dark-secondary flush"
      >
        0
         results of 
        12
      </h6>
    </div>
    <div
      className="one-whole text-center push-bottom"
    />
    <button
      className="relative one-whole push-double-top@lap-and-up push-double-top push-bottom@lap-and-up"
    >
      <div
        className="card soft soft-double-sides@lap-and-up"
      >
        <div
          className="card__item soft-double-sides@lap-and-up"
        >
          <div
            className="one-whole text-center@handheld"
          >
            <h4
              className="soft-half-top push-top@anchored capitalize"
            >
              Can't find what you're looking for, or want to start your own group?
            </h4>
            <Link
              className="btn push-half-top"
              href="https://rock.newspring.cc/workflows/81"
              onlyActiveOnIndex={false}
              style={Object {}}
            >
              Contact Us
            </Link>
          </div>
        </div>
      </div>
    </button>
  </div>
</section>
`;

exports[`renders with props 1`] = `
<section
  className="background--light-secondary hard"
>
  <Meta
    title="Group Finder"
  />
  <div
    className="background--light-primary soft soft-double-left@anchored outlined--light outlined--bottom"
    style={
      Object {
        "WebkitOverflowScrolling": "touch",
        "overflowX": "scroll",
        "overflowY": "hidden",
        "whiteSpace": "nowrap",
      }
    }
  >
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="0"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="test"
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="1"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="test"
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="0"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      urlKey="schedules"
      val={1}
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={false}
      className="flush-bottom"
      data-spec="iconTag"
      iconClass="icon-arrow-up"
      onClick={[Function]}
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="filter"
    />
  </div>
  <withRouter(Apollo(Apollo(Connect(FilterWithoutData))))
    q="test"
    showSearch={true}
    showTags={true}
    toggleSearch={true}
    toggleTags={true}
  />
  <div
    className="soft-half soft@portable soft-double-sides@anchored soft-ends@lap-and-up"
  >
    <div
      className="push-bottom push-double-bottom@lap-and-up soft-half-ends soft-half-sides"
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      <h6
        className="em float-left flush-bottom text-dark-tertiary"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        12
         Results
      </h6>
      <button
        className="float-right icon-search"
        onClick={[Function]}
        style={
          Object {
            "marginTop": "-4px",
          }
        }
      />
    </div>
    <div
      className="text-center soft-half-top push-top push-double-top@lap-and-up soft-half-bottom soft-half-sides"
    >
      <h6
        className="em text-dark-secondary flush"
      >
        0
         results of 
        12
      </h6>
    </div>
    <LoadingComponent />
    <div
      className="one-whole text-center push-bottom"
    >
      <div
        className="card push-top"
      >
        <div
          className="card__item soft-ends soft-half-sides soft-double@palm-wide-and-up"
        >
          <p
            className="flush hard"
          >
            <em>
              <small>
                Unfortunately, we didn't find any groups matching your search. You can start a group 
                <a
                  href="https://rock.newspring.cc/workflows/81"
                >
                  here!
                </a>
              </small>
            </em>
          </p>
        </div>
      </div>
    </div>
    <button
      className="relative one-whole push-double-top@lap-and-up push-double-top push-bottom@lap-and-up"
    >
      <div
        className="card soft soft-double-sides@lap-and-up"
      >
        <div
          className="card__item soft-double-sides@lap-and-up"
        >
          <div
            className="one-whole text-center@handheld"
          >
            <h4
              className="soft-half-top push-top@anchored capitalize"
            >
              Can't find what you're looking for, or want to start your own group?
            </h4>
            <Link
              className="btn push-half-top"
              href="https://rock.newspring.cc/workflows/81"
              onlyActiveOnIndex={false}
              style={Object {}}
            >
              Contact Us
            </Link>
          </div>
        </div>
      </div>
    </button>
  </div>
</section>
`;

exports[`shows down arrow on filter tag when tag drawer is closed 1`] = `
<section
  className="background--light-secondary hard"
>
  <Meta
    title="Group Finder"
  />
  <div
    className="background--light-primary soft soft-double-left@anchored outlined--light outlined--bottom"
    style={
      Object {
        "WebkitOverflowScrolling": "touch",
        "overflowX": "scroll",
        "overflowY": "hidden",
        "whiteSpace": "nowrap",
      }
    }
  >
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="0"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="test"
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="1"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="test"
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="0"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      urlKey="schedules"
      val={1}
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={false}
      className="flush-bottom"
      data-spec="iconTag"
      iconClass="icon-arrow-down"
      onClick={[Function]}
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="filter"
    />
  </div>
  <withRouter(Apollo(Apollo(Connect(FilterWithoutData))))
    q="test"
    showSearch={true}
    showTags={false}
    toggleSearch={true}
    toggleTags={true}
  />
  <div
    className="soft-half soft@portable soft-double-sides@anchored soft-ends@lap-and-up"
  >
    <div
      className="push-bottom push-double-bottom@lap-and-up soft-half-ends soft-half-sides"
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      <h6
        className="em float-left flush-bottom text-dark-tertiary"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        12
         Results
      </h6>
      <button
        className="float-right icon-search"
        onClick={[Function]}
        style={
          Object {
            "marginTop": "-4px",
          }
        }
      />
    </div>
    <div
      className="text-center soft-half-top push-top push-double-top@lap-and-up soft-half-bottom soft-half-sides"
    >
      <h6
        className="em text-dark-secondary flush"
      >
        0
         results of 
        12
      </h6>
    </div>
    <LoadingComponent />
    <div
      className="one-whole text-center push-bottom"
    >
      <div
        className="card push-top"
      >
        <div
          className="card__item soft-ends soft-half-sides soft-double@palm-wide-and-up"
        >
          <p
            className="flush hard"
          >
            <em>
              <small>
                Unfortunately, we didn't find any groups matching your search. You can start a group 
                <a
                  href="https://rock.newspring.cc/workflows/81"
                >
                  here!
                </a>
              </small>
            </em>
          </p>
        </div>
      </div>
    </div>
    <button
      className="relative one-whole push-double-top@lap-and-up push-double-top push-bottom@lap-and-up"
    >
      <div
        className="card soft soft-double-sides@lap-and-up"
      >
        <div
          className="card__item soft-double-sides@lap-and-up"
        >
          <div
            className="one-whole text-center@handheld"
          >
            <h4
              className="soft-half-top push-top@anchored capitalize"
            >
              Can't find what you're looking for, or want to start your own group?
            </h4>
            <Link
              className="btn push-half-top"
              href="https://rock.newspring.cc/workflows/81"
              onlyActiveOnIndex={false}
              style={Object {}}
            >
              Contact Us
            </Link>
          </div>
        </div>
      </div>
    </button>
  </div>
</section>
`;

exports[`shows up arrow on filter tag when tags are shown 1`] = `
<section
  className="background--light-secondary hard"
>
  <Meta
    title="Group Finder"
  />
  <div
    className="background--light-primary soft soft-double-left@anchored outlined--light outlined--bottom"
    style={
      Object {
        "WebkitOverflowScrolling": "touch",
        "overflowX": "scroll",
        "overflowY": "hidden",
        "whiteSpace": "nowrap",
      }
    }
  >
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="0"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="test"
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="1"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="test"
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={true}
      className="flush-bottom"
      key="0"
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      urlKey="schedules"
      val={1}
    />
    <withRouter(Connect(TagWithoutData))
      canBeActive={false}
      className="flush-bottom"
      data-spec="iconTag"
      iconClass="icon-arrow-up"
      onClick={[Function]}
      style={
        Object {
          "verticalAlign": "bottom",
        }
      }
      val="filter"
    />
  </div>
  <withRouter(Apollo(Apollo(Connect(FilterWithoutData))))
    q="test"
    showSearch={true}
    showTags={true}
    toggleSearch={true}
    toggleTags={true}
  />
  <div
    className="soft-half soft@portable soft-double-sides@anchored soft-ends@lap-and-up"
  >
    <div
      className="push-bottom push-double-bottom@lap-and-up soft-half-ends soft-half-sides"
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      <h6
        className="em float-left flush-bottom text-dark-tertiary"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        12
         Results
      </h6>
      <button
        className="float-right icon-search"
        onClick={[Function]}
        style={
          Object {
            "marginTop": "-4px",
          }
        }
      />
    </div>
    <div
      className="text-center soft-half-top push-top push-double-top@lap-and-up soft-half-bottom soft-half-sides"
    >
      <h6
        className="em text-dark-secondary flush"
      >
        0
         results of 
        12
      </h6>
    </div>
    <LoadingComponent />
    <div
      className="one-whole text-center push-bottom"
    >
      <div
        className="card push-top"
      >
        <div
          className="card__item soft-ends soft-half-sides soft-double@palm-wide-and-up"
        >
          <p
            className="flush hard"
          >
            <em>
              <small>
                Unfortunately, we didn't find any groups matching your search. You can start a group 
                <a
                  href="https://rock.newspring.cc/workflows/81"
                >
                  here!
                </a>
              </small>
            </em>
          </p>
        </div>
      </div>
    </div>
    <button
      className="relative one-whole push-double-top@lap-and-up push-double-top push-bottom@lap-and-up"
    >
      <div
        className="card soft soft-double-sides@lap-and-up"
      >
        <div
          className="card__item soft-double-sides@lap-and-up"
        >
          <div
            className="one-whole text-center@handheld"
          >
            <h4
              className="soft-half-top push-top@anchored capitalize"
            >
              Can't find what you're looking for, or want to start your own group?
            </h4>
            <Link
              className="btn push-half-top"
              href="https://rock.newspring.cc/workflows/81"
              onlyActiveOnIndex={false}
              style={Object {}}
            >
              Contact Us
            </Link>
          </div>
        </div>
      </div>
    </button>
  </div>
</section>
`;
